Added mario source to project

--- a/MarioPhone/MarioPhone.csproj
+++ b/MarioPhone/MarioPhone.csproj
@@ -154,7 +154,115 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="MarioHtml5\README" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="MarioHtml5\code\backgroundGenerator.js" />
+    <Content Include="MarioHtml5\code\backgroundRenderer.js" />
+    <Content Include="MarioHtml5\code\bulletBill.js" />
+    <Content Include="MarioHtml5\code\character.js" />
+    <Content Include="MarioHtml5\code\coinAnim.js" />
+    <Content Include="MarioHtml5\code\enemy.js" />
+    <Content Include="MarioHtml5\code\fireball.js" />
+    <Content Include="MarioHtml5\code\fireFlower.js" />
+    <Content Include="MarioHtml5\code\flowerEnemy.js" />
+    <Content Include="MarioHtml5\code\improvedNoise.js" />
+    <Content Include="MarioHtml5\code\level.js" />
+    <Content Include="MarioHtml5\code\levelGenerator.js" />
+    <Content Include="MarioHtml5\code\levelRenderer.js" />
+    <Content Include="MarioHtml5\code\levelState.js" />
+    <Content Include="MarioHtml5\code\loadingState.js" />
+    <Content Include="MarioHtml5\code\loseState.js" />
+    <Content Include="MarioHtml5\code\mapState.js" />
+    <Content Include="MarioHtml5\code\mushroom.js" />
+    <Content Include="MarioHtml5\code\music.js" />
+    <Content Include="MarioHtml5\code\notchSprite.js" />
+    <Content Include="MarioHtml5\code\particle.js" />
+    <Content Include="MarioHtml5\code\setup.js" />
+    <Content Include="MarioHtml5\code\shell.js" />
+    <Content Include="MarioHtml5\code\sparkle.js" />
+    <Content Include="MarioHtml5\code\spriteCuts.js" />
+    <Content Include="MarioHtml5\code\spriteTemplate.js" />
+    <Content Include="MarioHtml5\code\titleState.js" />
+    <Content Include="MarioHtml5\code\winState.js" />
+    <Content Include="MarioHtml5\enjine.min.js" />
+    <Content Include="MarioHtml5\Enjine\animatedSprite.js" />
+    <Content Include="MarioHtml5\Enjine\application.js" />
+    <Content Include="MarioHtml5\Enjine\camera.js" />
+    <Content Include="MarioHtml5\Enjine\collideable.js" />
+    <Content Include="MarioHtml5\Enjine\core.js" />
+    <Content Include="MarioHtml5\Enjine\drawable.js" />
+    <Content Include="MarioHtml5\Enjine\drawableManager.js" />
+    <Content Include="MarioHtml5\Enjine\frameSprite.js" />
+    <Content Include="MarioHtml5\Enjine\gameCanvas.js" />
+    <Content Include="MarioHtml5\Enjine\gameTimer.js" />
+    <Content Include="MarioHtml5\Enjine\keyboardInput.js" />
+    <Content Include="MarioHtml5\Enjine\resources.js" />
+    <Content Include="MarioHtml5\Enjine\sprite.js" />
+    <Content Include="MarioHtml5\Enjine\spriteFont.js" />
+    <Content Include="MarioHtml5\Enjine\state.js" />
+    <Content Include="MarioHtml5\flipTest.html" />
+    <Content Include="MarioHtml5\images\bgsheet.png" />
+    <Content Include="MarioHtml5\images\endscene.gif" />
+    <Content Include="MarioHtml5\images\enemysheet.png" />
+    <Content Include="MarioHtml5\images\firemariosheet.png" />
+    <Content Include="MarioHtml5\images\font.gif" />
+    <Content Include="MarioHtml5\images\gameovergost.gif" />
+    <Content Include="MarioHtml5\images\itemsheet.png" />
+    <Content Include="MarioHtml5\images\logo.gif" />
+    <Content Include="MarioHtml5\images\mapsheet.png" />
+    <Content Include="MarioHtml5\images\mariosheet.png" />
+    <Content Include="MarioHtml5\images\particlesheet.png" />
+    <Content Include="MarioHtml5\images\racoonmariosheet.png" />
+    <Content Include="MarioHtml5\images\smallmariosheet.png" />
+    <Content Include="MarioHtml5\images\title.gif" />
+    <Content Include="MarioHtml5\images\worldmap.png" />
+    <Content Include="MarioHtml5\main.html" />
+    <Content Include="MarioHtml5\mario.min.js" />
+    <Content Include="MarioHtml5\minTest.html" />
+    <Content Include="MarioHtml5\sounds\1-up.mp3" />
+    <Content Include="MarioHtml5\sounds\1-up.wav" />
+    <Content Include="MarioHtml5\sounds\breakblock.mp3" />
+    <Content Include="MarioHtml5\sounds\breakblock.wav" />
+    <Content Include="MarioHtml5\sounds\bump.mp3" />
+    <Content Include="MarioHtml5\sounds\bump.wav" />
+    <Content Include="MarioHtml5\sounds\cannon.mp3" />
+    <Content Include="MarioHtml5\sounds\cannon.wav" />
+    <Content Include="MarioHtml5\sounds\coin.mp3" />
+    <Content Include="MarioHtml5\sounds\coin.wav" />
+    <Content Include="MarioHtml5\sounds\death.mp3" />
+    <Content Include="MarioHtml5\sounds\death.wav" />
+    <Content Include="MarioHtml5\sounds\exit.mp3" />
+    <Content Include="MarioHtml5\sounds\exit.wav" />
+    <Content Include="MarioHtml5\sounds\fireball.mp3" />
+    <Content Include="MarioHtml5\sounds\fireball.wav" />
+    <Content Include="MarioHtml5\sounds\jump.mp3" />
+    <Content Include="MarioHtml5\sounds\jump.wav" />
+    <Content Include="MarioHtml5\sounds\kick.mp3" />
+    <Content Include="MarioHtml5\sounds\kick.wav" />
+    <Content Include="MarioHtml5\sounds\mapmusic.mp3" />
+    <Content Include="MarioHtml5\sounds\message.mp3" />
+    <Content Include="MarioHtml5\sounds\message.wav" />
+    <Content Include="MarioHtml5\sounds\pipe.mp3" />
+    <Content Include="MarioHtml5\sounds\pipe.wav" />
+    <Content Include="MarioHtml5\sounds\powerdown.mp3" />
+    <Content Include="MarioHtml5\sounds\powerdown.wav" />
+    <Content Include="MarioHtml5\sounds\powerup.mp3" />
+    <Content Include="MarioHtml5\sounds\powerup.wav" />
+    <Content Include="MarioHtml5\sounds\smb3map1.mid" />
+    <Content Include="MarioHtml5\sounds\smb3map1.mp3" />
+    <Content Include="MarioHtml5\sounds\smb3ovr1.mid" />
+    <Content Include="MarioHtml5\sounds\smb3undr.mid" />
+    <Content Include="MarioHtml5\sounds\smwfortress.mid" />
+    <Content Include="MarioHtml5\sounds\smwovr1.mid" />
+    <Content Include="MarioHtml5\sounds\smwovr2.mid" />
+    <Content Include="MarioHtml5\sounds\smwtitle.mid" />
+    <Content Include="MarioHtml5\sounds\smwtitle.mp3" />
+    <Content Include="MarioHtml5\sounds\sprout.mp3" />
+    <Content Include="MarioHtml5\sounds\sprout.wav" />
+    <Content Include="MarioHtml5\sounds\stagestart.mp3" />
+    <Content Include="MarioHtml5\sounds\stagestart.wav" />
+    <Content Include="MarioHtml5\sounds\stomp.mp3" />
+    <Content Include="MarioHtml5\sounds\stomp.wav" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
     <Content Include="Scripts\jquery.signalR-1.1.2.js" />
